--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,9 @@
 theme: minima
+title: Bitcoin Cleanup
+author:
+  name: Bitcoin Cleanup
+  email: hello@bitcoincleanup.com
+description: > # this means to ignore newlines until "show_excerpts:"
+  Write an awesome description for your new site here. You can edit this
+  line in _config.yml. It will appear in your document head meta (for
+  Google search results) and in your feed.xml site description.
