--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-theme: minima
+
 title: Bitcoin Cleanup
 author:
   name: Bitcoin Cleanup
@@ -7,3 +7,11 @@ description: > # this means to ignore newlines until "show_excerpts:"
   Write an awesome description for your new site here. You can edit this
   line in _config.yml. It will appear in your document head meta (for
   Google search results) and in your feed.xml site description.
+  
+show_excerpts: false # set to true to show excerpts on the homepage
+
+theme: minima
+
+plugins:
+ - jekyll-feed
+ - jekyll-seo-tag
