--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,6 @@
 title: Bitcoin Cleanup
-author:
-  name: Bitcoin Cleanup
-  email: hello@bitcoincleanup.com
+author: Bitcoin Cleanup
+email: hello@bitcoincleanup.com
 description: > # this means to ignore newlines until "show_excerpts:"
   The Bitcoin Cleanup Blog
   
