--- a/_config.yml
+++ b/_config.yml
@@ -6,6 +6,8 @@ description: > # this means to ignore newlines until "show_excerpts:"
   
 show_excerpts: true
 
+- blog/2022-09-22-greenpeace.md
+
 theme: minima
 
 plugins:
