--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ description: > # this means to ignore newlines until "show_excerpts:"
   
 show_excerpts: true
 
-minima:
+header_pages:
  - blog/2022-09-22-greenpeace.md
 
 theme: minima
