--- a/_config.yml
+++ b/_config.yml
@@ -12,5 +12,6 @@ header_pages:
 theme: minima
 
 plugins:
- - jekyll-feed
- - jekyll-seo-tag
+  - jekyll-feed
+  - jekyll-seo-tag
+  - jekyll-sitemap
