--- a/_config.yml
+++ b/_config.yml
@@ -8,6 +8,9 @@ show_excerpts: true
 
 header_pages:
  - blog/2022-09-22-greenpeace.md
+ - blog/2022-09-22-greenpeace.md
+ - blog/2022-09-22-greenpeace.md
+ - blog/2022-09-22-greenpeace.md
 
 theme: minima
 
