--- a/_config.yml
+++ b/_config.yml
@@ -25,11 +25,7 @@ description: > # this means to ignore newlines until "show_excerpts:"
 ###############################################
 
 navbar-links:
-  About Me: "aboutme"
-  Resources:
-    - Beautiful Jekyll: "https://beautifuljekyll.com"
-    - Learn markdown: "https://www.markdowntutorial.com/"
-  Author's home: "https://deanattali.com"
+  Homepage: "https://bitcoincleanup.com"
 
 ################
 # --- Logo --- #
