--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ description: > # this means to ignore newlines until "show_excerpts:"
 ###############################################
 
 navbar-links:
-  Homepage: "https://bitcoincleanup.com"
+  Main Page: "https://bitcoincleanup.com"
 
 ################
 # --- Logo --- #
